--- a/cloudbild.yaml
+++ b/cloudbild.yaml
@@ -6,3 +6,9 @@ steps:
 #Docker Push
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/${sit323-23t1-lora-liu-27b6c44}/node-web-app:$COMMIT_SHA']
+
+- name: 'gcr.io/cloud-builders/kubectl'
+args: ['set','image', 'deployment/mydeployment', 'mynode=gcr.io/${sit323-23t1-lora-liu-27b6c44}/node-web-app:$COMMIT_SHA']
+env:
+- 'CLOUDSDK_COMPUTE_ZONE=us-west1'
+- 'CLOUDSDK_CONTAINER_CLUSTER=hello-lora'
